change debug image as well